log-output-ping-pong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: log-ping-gke
  name: log-ping-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-ping
  template:
    metadata:
      labels:
        app: log-ping
    spec:
      containers:
        - name: log-output
          image: ushakiran369/log-output:3.4
          volumeMounts:
            - name: config-vol
              mountPath: /usr/share/app/config
              readOnly: true
        - name: ping-pong
          image: ushakiran369/ping-pong:3.4.v3
      volumes:
        - name: config-vol
          configMap:
            name: log-ping-config
