log-output-ping-pong/manifests/log-output-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: logoutput-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output
          image: LOG_OUTPUT_IMAGE
          readinessProbe:
            initialDelaySeconds: 6
            periodSeconds: 3
            httpGet:
              path: /healthz
              port: 3000
          volumeMounts:
            - name: config-vol
              mountPath: /usr/share/app/config
              readOnly: true
      volumes:
        - name: config-vol
          configMap:
            name: log-ping-config
