log-output-ping-pong/manifests/ping-pong-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: pingpong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: PING_PONG_IMAGE
          readinessProbe:
            initialDelaySeconds: 6
            periodSeconds: 3
            httpGet:
              path: /healthz
              port: 3001
