log-output-ping-pong/manifests/ping-pong-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  namespace: exercises
  name: pingpong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  strategy:
    canary:
      steps:
      - setWeight: 20
      - pause: { duration: 2m }
      # This step triggers an inline analysis run using your AnalysisTemplate
      - analysis:
          templates:
          - templateName: namespace-cpu-limit-check
      - setWeight: 50
      - pause: { duration: 2m }
      - setWeight: 100
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: ushakiran369/ping-pong:4.4
          readinessProbe:
            initialDelaySeconds: 6
            periodSeconds: 3
            httpGet:
              path: /healthz
              port: 3001
